<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sportsandsocieties.SportEventActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_society_launcher_forground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="329dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.171">

        <TextView
            android:id="@+id/whenLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventWhen"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/whenContent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/whereLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventWhere"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/whereContent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventDescription"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionContent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/goingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goingBtn" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
