<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sportsandsocieties.SocietyEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/whenLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventWhen"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/whenContent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/whereLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventWhere"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/whereContent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eventDescription"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionContent"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/goingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I'M GOING!" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
