<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sportsandsocieties.SportFixtureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fixtureType"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/citContent"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/vsLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/vs"
                android:gravity="center"
                android:textColor="#000000"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/opponentContent"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/whenLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sportWhen"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/whenContent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/whereLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sportWhere"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/locationContent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
